# Stun-Engine

./: .gitignore  CMakeLists.txt  README.md  StunEngine.sln  StunEngine.vcxproj  meson.build
StunEngine/x64/Debug/: StunEngine.exe.recipe  StunEngine.vcxproj.FileListAbsolute.txt  vc143.idb
StunEngine/x64/Debug/StunEngine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  StunEngine.lastbuildstate  StunEngine.write.1u.tlog  link.secondary.1.tlog
builddir/res/shaders/: Basic.shader  LightVertex.glsl
res/: meson.build
res/shaders/: Basic.shader  BasicFragment.glsl  BasicVertex.glsl  LightFragment.glsl  LightVertex.glsl  lit.frag  lit.vert
src/: Camera.cpp  Camera.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  main.cpp  meson.build
src/stb/: stb_image.h
