sources = files(
    'main.cpp',
    'Camera.cpp',
    'Camera.h',
    'IndexBuffer.cpp',
    'IndexBuffer.h',
    'Renderer.cpp',
    'Renderer.h',
    'Shader.cpp',
    'Shader.h',
    'Texture.cpp',
    'Texture.h',
    'VertexArray.cpp',
    'VertexArray.h',
    'VertexBuffer.cpp',
    'VertexBuffer.h',
    'VertexBufferLayout.cpp',
    'VertexBufferLayout.h',
    'stb/stb_image.h',
    'stb/stb_image.cpp',
)